# dnmtools

./: .clang-format  .clang-tidy  .cppcheck_suppress  .gitmodules  .readthedocs.yaml  CMakeLists.txt  CPPLINT.cfg  Dockerfile  MAINTAINERS.md  Makefile  Makefile.am  README.md  autogen.sh  code_of_conduct.md  configure.ac  iwyu.json  mkdocs.yml
.github/workflows/: build-docker-image.yml  c-cpp.yml  dnmtools_build_macos.yml  dnmtools_build_ubuntu.yml  dnmtools_distcheck_ubuntu.yml  dnmtools_release_linux.yml  dnmtools_release_macos.yml  docker-build.yml  macos-builds.yml  ubuntu-builds.yml  ubuntu-distcheck.yml
cmake/: FindHTSLIB.cmake  static_analysis.cmake
data/: LICENSE  config.h.in  make_full_license_info_header.sh  md5sum.txt  methylome_a.counts.sym  methylome_b.counts.sym  mlml_test_data.tgz  pmd_test_data.counts.sym  radmeth_test_design.txt  radmeth_test_table.txt  tRex1.fa  tRex_promoters.bed  two_epialleles.states
docs/: README.md  allelic.md  dnmtools-manual.tex  dnmtools_bash_completion  guessprotocol.md  mkdocs.yml  radadjust.md  requirements.txt  visualization.md
docs/content/: abismal.md  bsrate.md  cleanhp.md  counts-nano.md  counts.md  diff.md  entropy.md  environment.yaml  fastlift.md  format.md  guessprotocol.md  hmr.md  levels.md  liftfilter.md  merge.md  mlml.md  multistat.md  pmd.md  quickstart.md  radmerge.md  radmeth.md  roi.md  selectsites.md  states.md  uniq.md
docs/docs/: abismal.md  allelic.md  amrtester.md  counts.md  environment.yaml  fastlift.md  guessprotocol.md  hmr.md  levels.md  merge-bsrate.md  merge.md  multistat.md  radadjust.md  radmerge.md  states.md
documentation/: mkdocs.yml
documentation/docs/: abismal.md  allelic.md  amrfinder.md  amrtester.md  bsrate.md  cleanhp.md  counts.md  cytosine_contexts.md  diff.md  dmr.md  entropy.md  fastlift.md  format.md  hmr-rep.md  hmr.md  hypermr.md  index.md  lc.md  levels.md  liftfilter.md  merge-bsrate.md  merge.md  mlml.md  multistat.md  pmd.md  quickstart.md  radadjust.md  radmerge.md  radmeth.md  roi.md  selectsites.md  states.md  sym.md  uniq.md  visualization.md
m4/: ads_openmp.m4
pipeline/: Dockerfile  Snakefile  config.yaml  runconfig.yaml
src/: CMakeLists.txt  Makefile  dnmtools.cpp
src/amrfinder/: CMakeLists.txt  allelicmeth.cpp  amrfinder.cpp  amrscores.cpp  amrtester.cpp
src/analysis/: CMakeLists.txt  Makefile  autocorr.cpp  bsrate.cpp  cpgbins.cpp  hmr-rep.cpp  hmr.cpp  hypermr.cpp  levels.cpp  metagene.cpp  methcounts.cpp  methentropy.cpp  methstates.cpp  methsummary.cpp  multimethstat.cpp  nanopore.cpp  pmd.cpp  roimethstat.cpp
src/common/: BetaBin.cpp  BetaBin.hpp  CMakeLists.txt  Distro.cpp  Distro.hpp  EmissionDistribution.cpp  EmissionDistribution.hpp  Epiread.cpp  Epiread.hpp  EpireadStats.cpp  EpireadStats.hpp  Interval.cpp  Interval.hpp  Interval6.cpp  Interval6.hpp  LevelsCounter.cpp  LevelsCounter.hpp  MSite.cpp  MSite.hpp  MethpipeSite.cpp  MethpipeSite.hpp  Smoothing.cpp  Smoothing.hpp  ThreeStateHMM.cpp  ThreeStateHMM.hpp  TwoStateHMM.cpp  TwoStateHMM.hpp  TwoStateHMM_PMD.cpp  TwoStateHMM_PMD.hpp  bam_record.hpp  bam_record_utils.cpp  bam_record_utils.hpp  bsutils.cpp  bsutils.hpp  counts_header.cpp  counts_header.hpp  dnmt_error.hpp  dnmtools_gaussinv.cpp  dnmtools_gaussinv.hpp  dnmtools_lgamma.hpp  (+8 more)
src/common-experimental/: ModelParams.cxx  README.txt
src/mlml/: CMakeLists.txt  mlml.cpp
src/radmeth/: CMakeLists.txt  dmr.cpp  methdiff.cpp  radmeth-adjust.cpp  radmeth-merge.cpp  radmeth.cpp  radmeth_design.cpp  radmeth_design.hpp  radmeth_lgamma.hpp  radmeth_model.cpp  radmeth_model.hpp  radmeth_model_nano.cpp  radmeth_model_nano.hpp  radmeth_nano.cpp  radmeth_optimize.cpp  radmeth_optimize.hpp  radmeth_optimize_gamma.cpp  radmeth_optimize_gamma.hpp  radmeth_optimize_nano.cpp  radmeth_optimize_nano.hpp  radmeth_optimize_params.hpp  radmeth_optimize_series.cpp  radmeth_optimize_series.hpp  radmeth_summary_stats.cpp  radmeth_summary_stats.hpp  radmeth_utils.cpp  radmeth_utils.hpp
src/utils/: CMakeLists.txt  Makefile  clean-hairpins.cpp  covered.cpp  duplicate-remover.cpp  fast-liftover.cpp  format-reads.cpp  format_reads.cpp  guessprotocol.cpp  kmersites.cpp  lc-approx.cpp  lift-filter.cpp  merge-bsrate.cpp  merge-methcounts.cpp  merge-xsym.cpp  recovered.cpp  selectsites.cpp  symmetric-cpgs.cpp  uniq.cpp  unxcounts.cpp  xcounts.cpp
test/: test_abismal.test  test_abismalidx.test  test_bsrate.test  test_format.test  test_simreads.test
test_scripts/: test_abismal.test  test_abismalidx.test  test_amrfinder.test  test_bsrate.test  test_counts.test  test_diff.test  test_format.test  test_hmr.test  test_hypermr.test  test_levels.test  test_mlml.test  test_pmd.test  test_radmeth.test  test_roi.test  test_selectsites.test  test_simreads.test  test_states.test  test_sym.test  test_uniq.test  test_unxcounts.test  test_xcounts.test
